# ethynyl-radical-problem

./: CMakeLists.txt  LICENSE  README.md
src/framework/: README.md  logging.c  logging.h  main.c
src/solution/: kosmos.c  kosmos.h
